@startuml

title __CONFIG's Class Diagram__\n

  namespace com.ifmo.hatchery {
    namespace config {
      class com.ifmo.hatchery.config.MvcConfig {
          + addViewControllers()
      }
    }
  }
  

  namespace com.ifmo.hatchery {
    namespace config {
      class com.ifmo.hatchery.config.WebSecurityConfig {
          + bCryptPasswordEncoder()
          # configure()
          # configureGlobal()
      }
    }
  }
  

  com.ifmo.hatchery.config.MvcConfig .up.|> org.springframework.web.servlet.config.annotation.WebMvcConfigurer
  com.ifmo.hatchery.config.WebSecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  com.ifmo.hatchery.config.WebSecurityConfig o-- com.ifmo.hatchery.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
